added missing content

--- a/src/pages/es/reference/api-reference.mdx
+++ b/src/pages/es/reference/api-reference.mdx
@@ -3,8 +3,9 @@ layout: ~/layouts/MainLayout.astro
 title: Referencia de la API
 i18nReady: true
 ---
-import Since from '~/components/Since.astro'
-import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
+
+import Since from '~/components/Since.astro';
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro';
 
 ## `Astro` global
 
@@ -37,6 +38,7 @@ const posts = await Astro.glob('../pages/post/*.md'); // devuelve un array de ar
 
 :::note
 También puedes utilizar `import.meta.glob()` directamente en tu proyecto de Astro. Es posible que quieras hacer esto cuando:
+
 - Necesitas esta característica en un archivo que no sea `.astro`, como una ruta API. `Astro.glob()` solamente está disponible en archivos `.astro`, mientras que `import.meta.glob()` es accesible en todo el proyecto.
 - No necesitas cargar cada archivo de inmediato. `import.meta.glob()` puede devolver funciones que importan el contenido del archivo, en vez de devolver el contenido en sí.
 - Quieres acceder a la ruta de cada archivo. `import.meta.glob()` devuelve un map de la ruta del archivo a su contenido, mientras que `Astro.glob()` devuelve una lista de contenido.
@@ -44,21 +46,22 @@ También puedes utilizar `import.meta.glob()` directamente en tu proyecto de Ast
 
 Lee más en la [documentación de Vite](https://vitejs.dev/guide/features.html#glob-import).
 :::
+
 #### Archivos Markdown
 
 Los archivos Markdown tienen la siguiente interfaz:
 
 ```ts
 export interface MarkdownInstance<T extends Record<string, any>> {
-  /* Cualquier dato especificado en el frontmatter de YAML del archivo */
+	/* Cualquier dato especificado en el frontmatter de YAML del archivo */
 	frontmatter: T;
-  /* La ruta del archivo */
+	/* La ruta del archivo */
 	file: string;
-  /* La ruta en donde se renderizará este archivo */
+	/* La ruta en donde se renderizará este archivo */
 	url: string | undefined;
-  /* Componente de Astro que renderizará el contenido del archivo */
+	/* Componente de Astro que renderizará el contenido del archivo */
 	Content: AstroComponent;
-  /* Función que devuelve un array de elementos h1...h6 del archivo */
+	/* Función que devuelve un array de elementos h1...h6 del archivo */
 	getHeadings(): Promise<{ depth: number; slug: string; text: string }[]>;
 }
 ```
@@ -196,26 +199,24 @@ Astro.response.headers.set('Set-Cookie', 'a=b; Path=/;');
 
 `Astro.cookies` contiene utilidades para leer y manipular cookies.
 
-| Nombre           | Tipo                                              | Descripción                                        |
-| :------------- | :------------------------------------------------ | :------------------------------------------------- |
-| `get`          | `(key: string) => AstroCookie`                       | Obtiene la cookie como un objeto [`AstroCookie`](#astrocookie), el cual contiene el `value` y funciones utilitarias para convertir la cookie en tipos no-string.          |
-| `has`          | `(key: string) => boolean`                       | Indica si esta cookie existe. Si la cookie se ha establecido a través de `Astro.cookies.set()` esto retornará _true_, de lo contrario, comprobará las cookies en `Astro.request`.          |
-| `set`       | `(key: string, value: string \| number \| boolean \| object, options?: CookieOptions) => void` | Establece el `key` de la cookie al valor dado. Esto intentará convertir el valor de la cookie en un _string_. _Options_ provee formas de establecer [características de la cookie](https://www.npmjs.com/package/cookie#options-1), como el `maxAge` o `httpOnly`.   |
-| `delete`       | `(key: string, options?: CookieDeleteOptions) => void` | Marca la cookie como eliminada. Una vez que se elimina una cookie `Astro.cookies.has()` retornará `false` y `Astro.cookies.get()` retornará [`AstroCookie`](#astrocookie) con un `value` de `undefined`. Options permite configurar el `domain` y el `path` de la cookie para borrar. |
-| `headers`       | `() => Iterator<string>` | Obtiene los valores de _headers_ para `Set-Cookie` que se enviarán con la respuesta.   |
-
+| Nombre    | Tipo                                                                                           | Descripción                                                                                                                                                                                                                                                                           |
+| :-------- | :--------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| `get`     | `(key: string) => AstroCookie`                                                                 | Obtiene la cookie como un objeto [`AstroCookie`](#astrocookie), el cual contiene el `value` y funciones utilitarias para convertir la cookie en tipos no-string.                                                                                                                      |
+| `has`     | `(key: string) => boolean`                                                                     | Indica si esta cookie existe. Si la cookie se ha establecido a través de `Astro.cookies.set()` esto retornará _true_, de lo contrario, comprobará las cookies en `Astro.request`.                                                                                                     |
+| `set`     | `(key: string, value: string \| number \| boolean \| object, options?: CookieOptions) => void` | Establece el `key` de la cookie al valor dado. Esto intentará convertir el valor de la cookie en un _string_. _Options_ provee formas de establecer [características de la cookie](https://www.npmjs.com/package/cookie#options-1), como el `maxAge` o `httpOnly`.                    |
+| `delete`  | `(key: string, options?: CookieDeleteOptions) => void`                                         | Marca la cookie como eliminada. Una vez que se elimina una cookie `Astro.cookies.has()` retornará `false` y `Astro.cookies.get()` retornará [`AstroCookie`](#astrocookie) con un `value` de `undefined`. Options permite configurar el `domain` y el `path` de la cookie para borrar. |
+| `headers` | `() => Iterator<string>`                                                                       | Obtiene los valores de _headers_ para `Set-Cookie` que se enviarán con la respuesta.                                                                                                                                                                                                  |
 
 #### `AstroCookie`
 
 Obtener una cookie mediante `Astro.cookies.get()` retorna un tipo `AstroCookie`. Posee la siguiente estructura.
 
-| Nombre           | Tipo                                              | Descripción                                        |
-| :------------- | :------------------------------------------------ | :------------------------------------------------- |
-| `value`          | `string`                       | El valor de la cookie en formato string puro.          |
-| `json`          | `() => Record<string, any>`                       | Analiza el valor de la cookie a través de `JSON.parse()`, retornando un objeto. Arroja error si el valor de la cookie no es un JSON válido.         |
-| `number`       | `() => number` | Analiza el valor de la cookie como un _Number_. Retorna NaN si no es un número válido.   |
-| `boolean`       | `() => boolean` | Convierte el valor de la cookie en un booleano.   |
-
+| Nombre    | Tipo                        | Descripción                                                                                                                                 |
+| :-------- | :-------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------ |
+| `value`   | `string`                    | El valor de la cookie en formato string puro.                                                                                               |
+| `json`    | `() => Record<string, any>` | Analiza el valor de la cookie a través de `JSON.parse()`, retornando un objeto. Arroja error si el valor de la cookie no es un JSON válido. |
+| `number`  | `() => number`              | Analiza el valor de la cookie como un _Number_. Retorna NaN si no es un número válido.                                                      |
+| `boolean` | `() => boolean`             | Convierte el valor de la cookie en un booleano.                                                                                             |
 
 ### `Astro.canonicalURL`
 
@@ -394,14 +395,14 @@ Y renderizaría este HTML:
 
 ```html
 <ul class="nested-list">
-  <li>A</li>
-  <li>
-    <ul class="nested-list">
-      <li>B</li>
-      <li>C</li>
-    </ul>
-  </li>
-  <li>D</li>
+	<li>A</li>
+	<li>
+		<ul class="nested-list">
+			<li>B</li>
+			<li>C</li>
+		</ul>
+	</li>
+	<li>D</li>
 </ul>
 ```
 
@@ -413,7 +414,7 @@ Y renderizaría este HTML:
 import type { APIContext } from 'astro';
 
 export function get(context: APIContext) {
-  // ...
+	// ...
 }
 ```
 
@@ -429,16 +430,12 @@ En builds SSR, esto puede ser cualquier valor que coincida con los segmentos de 
 import type { APIContext } from 'astro';
 
 export function getStaticPaths() {
-  return [
-    { params: { id: '1' } },
-    { params: { id: '2' } },
-    { params: { id: '3' } }
-  ];
+	return [{ params: { id: '1' } }, { params: { id: '2' } }, { params: { id: '3' } }];
 }
 
 export function get({ params }: APIContext) {
 	return {
-		body: JSON.stringify({ id: params.id })
+		body: JSON.stringify({ id: params.id }),
 	};
 }
 ```
@@ -453,11 +450,11 @@ Ver también: [`params`](#params)
 import type { APIContext } from 'astro';
 
 export function getStaticPaths() {
-  return [
-    { params: { id: '1' }, props: { author: 'Blu' } },
-    { params: { id: '2' }, props: { author: 'Erika' } },
-    { params: { id: '3' }, props: { author: 'Matthew' } }
-  ];
+	return [
+		{ params: { id: '1' }, props: { author: 'Blu' } },
+		{ params: { id: '2' }, props: { author: 'Erika' } },
+		{ params: { id: '3' }, props: { author: 'Matthew' } },
+	];
 }
 
 export function get({ props }: APIContext) {
@@ -477,9 +474,9 @@ Un objeto [Request](https://developer.mozilla.org/es/docs/Web/API/Request) está
 import type { APIContext } from 'astro';
 
 export function get({ request }: APIContext) {
-  return {
-    body: `Hello ${request.url}`
-  }
+	return {
+		body: `Hello ${request.url}`,
+	};
 }
 ```
 
@@ -505,14 +502,13 @@ Especifica la [dirección IP](https://es.wikipedia.org/wiki/Dirección_IP) de la
 import type { APIContext } from 'astro';
 
 export function get({ clientAddress }: APIContext) {
-  return {
-    body: `Your IP address is: ${clientAddress}`
-  }
+	return {
+		body: `Your IP address is: ${clientAddress}`,
+	};
 }
 ```
 
 Ver también: [Astro.clientAddress](#astroclientaddress)
-
 
 ### `context.site`
 
@@ -528,8 +524,8 @@ Ver también: [Astro.site](#astrosite)
 import type { APIContext } from 'astro';
 
 export function get({ generator, site }: APIContext) {
-  const body = JSON.stringify({ generator, site });
-  return new Response(body);
+	const body = JSON.stringify({ generator, site });
+	return new Response(body);
 }
 ```
 
@@ -543,7 +539,7 @@ Ver también: [Astro.generator](#astrogenerator)
 import type { APIContext } from 'astro';
 
 export function get({ redirect }: APIContext) {
-  return redirect('/login', 302);
+	return redirect('/login', 302);
 }
 ```
 
@@ -660,13 +656,13 @@ La paginación es un caso de uso común para los sitios web que Astro admite de 
 
 ```js
 export async function getStaticPaths({ paginate }) {
-  // Carga tus datos con fetch(), Astro.glob(), etc.
-  const response = await fetch(`https://pokeapi.co/api/v2/pokemon?limit=150`);
-  const result = await response.json();
-  const allPokemon = result.results;
+	// Carga tus datos con fetch(), Astro.glob(), etc.
+	const response = await fetch(`https://pokeapi.co/api/v2/pokemon?limit=150`);
+	const result = await response.json();
+	const allPokemon = result.results;
 
-  // Devuelve una colección paginada de rutas para todos los artículos.
-  return paginate(allPokemon, { pageSize: 10 });
+	// Devuelve una colección paginada de rutas para todos los artículos.
+	return paginate(allPokemon, { pageSize: 10 });
 }
 
 // Si se configuró correctamente, La prop de la página ahora tiene todo lo que
@@ -683,23 +679,23 @@ const { page } = Astro.props;
 
 La paginación pasará una prop `page` a cada página renderizada que represente una sola página de datos en la colección paginada. Esto incluye los datos que ha paginado (`page.data`), así como los metadatos de la página (`page.url`, `page.start`, `page.end`, `page.total`, etc.). Estos metadatos son útiles para cosas como un botón "Página siguiente" o un mensaje "Mostrando 1-10 de 100".
 
-| Nombre             |         Tipo          | Descripción                                                                                                                       |
-| :----------------- | :-------------------: | :-------------------------------------------------------------------------------------------------------------------------------- |
-| `page.data`        |        `Array`        | Array de datos devueltos desde `data()` para la página actual.                                                                     |
+| Nombre             |         Tipo          | Descripción                                                                                                                                              |
+| :----------------- | :-------------------: | :------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `page.data`        |        `Array`        | Array de datos devueltos desde `data()` para la página actual.                                                                                           |
 | `page.start`       |       `number`        | Índice del primer elemento en la página actual, comenzando en `0` (por ejemplo, si `pageSize: 25`, sería `0` en la página 1, `25` en la página 2, etc.). |
-| `page.end`         |       `number`        | Índice del último elemento de la página actual.                                                                                               |
-| `page.size`        |       `number`        | Cantidad de artículos por página.                                                                   |
-| `page.total`       |       `number`        | El número total de elementos en todas las páginas.                                                                                       |
-| `page.currentPage` |       `number`        | El número de página actual, comenzando con `1`.                                                                                       |
-| `page.lastPage`    |       `number`        | El número total de páginas.                                                                                                        |
-| `page.url.current` |       `string`        | La URL de la página actual (útil para URL canónicas)                                                                       |
-| `page.url.prev`    | `string \| undefined` | La URL de la página anterior (será `undefined` si está en la página 1).                                                              |
-| `page.url.next`    | `string \| undefined` | La URL de la siguiente página (será `undefined` si no hay más páginas).                                                              |
+| `page.end`         |       `number`        | Índice del último elemento de la página actual.                                                                                                          |
+| `page.size`        |       `number`        | Cantidad de artículos por página.                                                                                                                        |
+| `page.total`       |       `number`        | El número total de elementos en todas las páginas.                                                                                                       |
+| `page.currentPage` |       `number`        | El número de página actual, comenzando con `1`.                                                                                                          |
+| `page.lastPage`    |       `number`        | El número total de páginas.                                                                                                                              |
+| `page.url.current` |       `string`        | La URL de la página actual (útil para URL canónicas)                                                                                                     |
+| `page.url.prev`    | `string \| undefined` | La URL de la página anterior (será `undefined` si está en la página 1).                                                                                  |
+| `page.url.next`    | `string \| undefined` | La URL de la siguiente página (será `undefined` si no hay más páginas).                                                                                  |
 
 ## Colecciones de Contenido (Experimental)
 
 <p>
-  <Since v="1.7.0" />
+	<Since v="1.7.0" />
 </p>
 
 Las colecciones de contenido ofrecen APIs para configurar y consultar tus documentos Markdown o MDX en `src/content/`. Para obtener características y ejemplos de uso, [consulta nuestra guía de colecciones de contenido](/es/guides/content-collections/).
@@ -712,13 +708,13 @@ Las colecciones de contenido ofrecen APIs para configurar y consultar tus docume
 // src/content/config.ts
 import { z, defineCollection } from 'astro:content';
 const blog = defineCollection({
-  schema: {
-    title: z.string(),
-    permalink: z.string().optional(),
-  },
-  slug({ id, data, defaultSlug, body }) {
-    return data.permalink ?? defaultSlug;
-  }
+	schema: {
+		title: z.string(),
+		permalink: z.string().optional(),
+	},
+	slug({ id, data, defaultSlug, body }) {
+		return data.permalink ?? defaultSlug;
+	},
 });
 // Expone tu colección definida a Astro
 // con el export `collections`
@@ -766,7 +762,6 @@ const draftBlogPosts = await getCollection('blog', ({ data }) => {
 **Type:** `(collection: string, id: string) => CollectionEntry<collection>`
 
 `getEntry()` es una función que recupera una sola entrada de colección por nombre de colección e [identificador de entrada](#id).
-
 
 ```astro
 ---
@@ -820,13 +815,13 @@ Una función para compilar un documento Markdown o MDX dado para su renderizado.
 
 - `<Content />` - Un componente usado para renderizar el contenido del documento en un archivo Astro.
 - `headings` - Una lista generada de encabezados, [que refleja la utilidad `getHeadings()` de Astro](/es/guides/markdown-content/#propiedades-exportadas) en las importaciones de Markdown y MDX.
-- `injectedFrontematter ` - Un objeto de frontmatter [inyectado a través de plugins de remark o rehype](/es/guides/markdown-content/#ejemplo-inyectando-frontmatter). Establecido en el tipo `any`.
+- `remarkPluginFrontmatter` - El objeto frontmatter moficado después de cualquier [plugin remark o rehype ha sido aplicado](/es/guides/markdown-content/#modifying-frontmatter-programmatically). Configurado para el tipo `any`.
 
 ```astro
 ---
 import { getEntry } from 'astro:content';
 const entry = await getEntry('blog', 'entry-1.md');
-const { Content, headings, injectedFrontmatter } = await entry.render();
+const {Content, headings, remarkPluginFrontmatter} = await entry.render();
 ---
 ```
 
@@ -842,9 +837,10 @@ Todos los módulos ESM incluyen una propiedad `import.meta`. Astro agrega `impor
 import { h } from 'preact';
 
 export default function () {
-  return import.meta.env.SSR ? <div class="spinner"></div> : <FancyComponent />;
+	return import.meta.env.SSR ? <div class="spinner"></div> : <FancyComponent />;
 }
 ```
+
 ## Componentes incorporados
 
 Astro incluye varios componentes incorporados para que los uses en tus proyectos. Todos los componentes incorporados están disponibles en archivos `.astro` a través de `import {} from 'astro/components';`.
@@ -874,21 +870,9 @@ Este componente proporciona resaltado de sintaxis para bloques de código en el 
 Para usar el componente resaltador `Prism`, primero **instala** el paquete `@astrojs/prism`:
 
 <PackageManagerTabs>
-  <Fragment slot="npm">
-  ```shell
-  npm install @astrojs/prism
-  ```
-  </Fragment>
-  <Fragment slot="pnpm">
-  ```shell
-  pnpm install @astrojs/prism
-  ```
-  </Fragment>
-  <Fragment slot="yarn">
-  ```shell
-  yarn add @astrojs/prism
-  ```
-  </Fragment>
+	<Fragment slot="npm">```shell npm install @astrojs/prism ```</Fragment>
+	<Fragment slot="pnpm">```shell pnpm install @astrojs/prism ```</Fragment>
+	<Fragment slot="yarn">```shell yarn add @astrojs/prism ```</Fragment>
 </PackageManagerTabs>
 
 ```astro
@@ -919,6 +903,5 @@ const serverObject = {
 ```
 
 Este componente proporciona una forma de inspeccionar valores en el lado del cliente, sin JavaScript.
-
 
 [canonical]: https://en.wikipedia.org/wiki/Canonical_link_element
