Feat: updating 'why astro' pages in French

--- a/src/pages/fr/concepts/why-astro.mdx
+++ b/src/pages/fr/concepts/why-astro.mdx
@@ -1,3 +1,4 @@
+https://github.com/pioupia/astro-docs/compare/2ec991d...5bc3f2d#diff-c5fd2554a9b061936e33418528f90aca9960275ce101bc3248ece1e95d566f57
 ---
 layout: ~/layouts/MainLayout.astro
 title: Pourquoi Astro ?
@@ -54,7 +55,7 @@ De bonnes performances sont toujours importantes, mais elles sont *spécialement
 - 20 % plus rapide → 10 % de conversions en plus ([Furniture Village](https://www.thinkwithgoogle.com/intl/en-gb/marketing-strategies/app-and-mobile/furniture-village-and-greenlight-slash-page-load-times-boosting-user-experience/))
 - 40% plus rapide → 15% d'inscriptions en plus ([Pinterest](https://medium.com/pinterest-engineering/driving-user-growth-with-performance-improvements-cfc50dafadd7))
 - 850ms plus rapide → 7% de conversions en plus ([COOK](https://web.dev/why-speed-matters/))
-- 1 seconde plus lent → 10 % d'utilisateurs en moins ([BBC](https://www.creativebloq.com/features/how-the-bbc-builds-websites-that-scale))
+- À Chaque seconde de ralentissement → 10 % d'utilisateurs en moins ([BBC](https://www.creativebloq.com/features/how-the-bbc-builds-websites-that-scale))
 
 Dans de nombreux frameworks web, il est facile de créer un site web qui a l'air génial pendant le développement, mais qui se charge douloureusement lentement une fois déployé. JavaScript est souvent le coupable, car les téléphones des utilisateurs et les appareils moins puissants atteignent rarement la vitesse de l'ordinateur portable d'un développeur.
 
