Revert some formatting changes

--- a/src/pages/es/reference/api-reference.mdx
+++ b/src/pages/es/reference/api-reference.mdx
@@ -53,16 +53,16 @@ Los archivos Markdown tienen la siguiente interfaz:
 
 ```ts
 export interface MarkdownInstance<T extends Record<string, any>> {
-	/* Cualquier dato especificado en el frontmatter de YAML del archivo */
-	frontmatter: T;
-	/* La ruta del archivo */
-	file: string;
-	/* La ruta en donde se renderizará este archivo */
-	url: string | undefined;
-	/* Componente de Astro que renderizará el contenido del archivo */
-	Content: AstroComponent;
-	/* Función que devuelve un array de elementos h1...h6 del archivo */
-	getHeadings(): Promise<{ depth: number; slug: string; text: string }[]>;
+  /* Cualquier dato especificado en el frontmatter de YAML del archivo */
+  frontmatter: T;
+  /* La ruta del archivo */
+  file: string;
+  /* La ruta en donde se renderizará este archivo */
+  url: string | undefined;
+  /* Componente de Astro que renderizará el contenido del archivo */
+  Content: AstroComponent;
+  /* Función que devuelve un array de elementos h1...h6 del archivo */
+  getHeadings(): Promise<{ depth: number; slug: string; text: string }[]>;
 }
 ```
 
@@ -88,7 +88,7 @@ Los archivos Astro tienen la siguiente interfaz:
 
 ```ts
 export interface AstroInstance {
-	default: AstroComponent;
+  default: AstroComponent;
 }
 ```
 
@@ -395,14 +395,14 @@ Y renderizaría este HTML:
 
 ```html
 <ul class="nested-list">
-	<li>A</li>
-	<li>
-		<ul class="nested-list">
-			<li>B</li>
-			<li>C</li>
-		</ul>
-	</li>
-	<li>D</li>
+  <li>A</li>
+  <li>
+    <ul class="nested-list">
+      <li>B</li>
+      <li>C</li>
+    </ul>
+  </li>
+  <li>D</li>
 </ul>
 ```
 
@@ -414,7 +414,7 @@ Y renderizaría este HTML:
 import type { APIContext } from 'astro';
 
 export function get(context: APIContext) {
-	// ...
+  // ...
 }
 ```
 
@@ -430,13 +430,17 @@ En builds SSR, esto puede ser cualquier valor que coincida con los segmentos de 
 import type { APIContext } from 'astro';
 
 export function getStaticPaths() {
-	return [{ params: { id: '1' } }, { params: { id: '2' } }, { params: { id: '3' } }];
+  return [
+    { params: { id: '1' } },
+    { params: { id: '2' } },
+    { params: { id: '3' } }
+  ];
 }
 
 export function get({ params }: APIContext) {
-	return {
-		body: JSON.stringify({ id: params.id }),
-	};
+  return {
+    body: JSON.stringify({ id: params.id }),
+  };
 }
 ```
 
@@ -450,17 +454,17 @@ Ver también: [`params`](#params)
 import type { APIContext } from 'astro';
 
 export function getStaticPaths() {
-	return [
-		{ params: { id: '1' }, props: { author: 'Blu' } },
-		{ params: { id: '2' }, props: { author: 'Erika' } },
-		{ params: { id: '3' }, props: { author: 'Matthew' } },
-	];
+  return [
+    { params: { id: '1' }, props: { author: 'Blu' } },
+    { params: { id: '2' }, props: { author: 'Erika' } },
+    { params: { id: '3' }, props: { author: 'Matthew' } },
+  ];
 }
 
 export function get({ props }: APIContext) {
-	return {
-		body: JSON.stringify({ author: props.author }),
-	};
+  return {
+    body: JSON.stringify({ author: props.author }),
+  };
 }
 ```
 
@@ -474,9 +478,9 @@ Un objeto [Request](https://developer.mozilla.org/es/docs/Web/API/Request) está
 import type { APIContext } from 'astro';
 
 export function get({ request }: APIContext) {
-	return {
-		body: `Hello ${request.url}`,
-	};
+  return {
+    body: `Hello ${request.url}`,
+  };
 }
 ```
 
@@ -502,9 +506,9 @@ Especifica la [dirección IP](https://es.wikipedia.org/wiki/Dirección_IP) de la
 import type { APIContext } from 'astro';
 
 export function get({ clientAddress }: APIContext) {
-	return {
-		body: `Your IP address is: ${clientAddress}`,
-	};
+  return {
+    body: `Your IP address is: ${clientAddress}`,
+  };
 }
 ```
 
@@ -524,8 +528,8 @@ Ver también: [Astro.site](#astrosite)
 import type { APIContext } from 'astro';
 
 export function get({ generator, site }: APIContext) {
-	const body = JSON.stringify({ generator, site });
-	return new Response(body);
+  const body = JSON.stringify({ generator, site });
+  return new Response(body);
 }
 ```
 
@@ -539,7 +543,7 @@ Ver también: [Astro.generator](#astrogenerator)
 import type { APIContext } from 'astro';
 
 export function get({ redirect }: APIContext) {
-	return redirect('/login', 302);
+  return redirect('/login', 302);
 }
 ```
 
@@ -656,13 +660,13 @@ La paginación es un caso de uso común para los sitios web que Astro admite de 
 
 ```js
 export async function getStaticPaths({ paginate }) {
-	// Carga tus datos con fetch(), Astro.glob(), etc.
-	const response = await fetch(`https://pokeapi.co/api/v2/pokemon?limit=150`);
-	const result = await response.json();
-	const allPokemon = result.results;
+  // Carga tus datos con fetch(), Astro.glob(), etc.
+  const response = await fetch(`https://pokeapi.co/api/v2/pokemon?limit=150`);
+  const result = await response.json();
+  const allPokemon = result.results;
 
-	// Devuelve una colección paginada de rutas para todos los artículos.
-	return paginate(allPokemon, { pageSize: 10 });
+  // Devuelve una colección paginada de rutas para todos los artículos.
+  return paginate(allPokemon, { pageSize: 10 });
 }
 
 // Si se configuró correctamente, La prop de la página ahora tiene todo lo que
@@ -695,7 +699,7 @@ La paginación pasará una prop `page` a cada página renderizada que represente
 ## Colecciones de Contenido (Experimental)
 
 <p>
-	<Since v="1.7.0" />
+  <Since v="1.7.0" />
 </p>
 
 Las colecciones de contenido ofrecen APIs para configurar y consultar tus documentos Markdown o MDX en `src/content/`. Para obtener características y ejemplos de uso, [consulta nuestra guía de colecciones de contenido](/es/guides/content-collections/).
@@ -708,13 +712,13 @@ Las colecciones de contenido ofrecen APIs para configurar y consultar tus docume
 // src/content/config.ts
 import { z, defineCollection } from 'astro:content';
 const blog = defineCollection({
-	schema: {
-		title: z.string(),
-		permalink: z.string().optional(),
-	},
-	slug({ id, data, defaultSlug, body }) {
-		return data.permalink ?? defaultSlug;
-	},
+  schema: {
+    title: z.string(),
+    permalink: z.string().optional(),
+  },
+  slug({ id, data, defaultSlug, body }) {
+    return data.permalink ?? defaultSlug;
+  },
 });
 // Expone tu colección definida a Astro
 // con el export `collections`
@@ -837,7 +841,7 @@ Todos los módulos ESM incluyen una propiedad `import.meta`. Astro agrega `impor
 import { h } from 'preact';
 
 export default function () {
-	return import.meta.env.SSR ? <div class="spinner"></div> : <FancyComponent />;
+  return import.meta.env.SSR ? <div class="spinner"></div> : <FancyComponent />;
 }
 ```
 
@@ -870,9 +874,21 @@ Este componente proporciona resaltado de sintaxis para bloques de código en el 
 Para usar el componente resaltador `Prism`, primero **instala** el paquete `@astrojs/prism`:
 
 <PackageManagerTabs>
-	<Fragment slot="npm">```shell npm install @astrojs/prism ```</Fragment>
-	<Fragment slot="pnpm">```shell pnpm install @astrojs/prism ```</Fragment>
-	<Fragment slot="yarn">```shell yarn add @astrojs/prism ```</Fragment>
+  <Fragment slot="npm">
+  ```shell
+  npm install @astrojs/prism
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm install @astrojs/prism
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn add @astrojs/prism
+  ```
+  </Fragment>
 </PackageManagerTabs>
 
 ```astro
