i18n(es): Update of `api-reference.mdx` and `cli-reference.mdx` (#2246)
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/es/reference/cli-reference.mdx
+++ b/src/pages/es/reference/cli-reference.mdx
@@ -1,12 +1,10 @@
 ---
 layout: ~/layouts/MainLayout.astro
 title: Referencia del CLI
-i18nReady: true
+i18nReady: true 
 ---
 import Since from '~/components/Since.astro';
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
-
-
 
 Puedes usar la Interfaz de Línea de Comandos (CLI) provista por Astro para desarrollar, construir y previsualizar tu proyecto desde una ventana de la terminal.
 
@@ -112,6 +110,14 @@ Este comando solo verifica los tipos dentro de los archivos `.astro`.
 :::
 
 📚 Lee más sobre la [compatibilidad con TypeScript en Astro](/es/guides/typescript/).
+
+## `astro sync`
+
+<p>
+  <Since v="1.7.0" />
+</p>
+
+Genera tipos de TypeScript para todos los módulos de Astro. Hoy, esto incluye el módulo `astro:content` para la (experimental) [API de colecciones de contenido](/es/guides/content-collections/).
 
 ## `astro add`
 
