Fix (most) broken links

--- a/src/pages/ar/getting-started.mdx
+++ b/src/pages/ar/getting-started.mdx
@@ -99,7 +99,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 [سجل تغيرات أسترو](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md)
 
-[دليل الترقية بين الإصدارات](/ar/migrate/)
+[دليل الترقية بين الإصدارات](/ar/upgrade-astro/)
 
 ## المساهمة
 
