--- a/src/pages/de/getting-started.mdx
+++ b/src/pages/de/getting-started.mdx
@@ -104,7 +104,7 @@ Tritt dem [Astro-Discord](https://astro.build/chat/) bei, um deine Erfahrungen u
 
 [Astro-Änderungsverlauf](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md)
 
-[Migrations-Anleitung](/de/migrate/)
+[Migrations-Anleitung](/de/upgrade-astro/)
 
 
 ## Wirke bei Astro mit
