--- a/src/pages/en/getting-started.mdx
+++ b/src/pages/en/getting-started.mdx
@@ -107,7 +107,7 @@ Join us in the [Astro Discord](https://astro.build/chat/) to share with and get 
 
 [Astro changelog](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md)
 
-[Astro Migration guide](/en/migrate/)
+[Astro Migration guide](/en/upgrade-astro/)
 
 
 ## Contribute
