--- a/src/pages/en/upgrade-astro.mdx
+++ b/src/pages/en/upgrade-astro.mdx
@@ -237,11 +237,11 @@ Astro v2.0 introduces some changes that you should be aware of when migrating fr
   <img src={imageUrl} />
   ```
 
-  See the [v0.25 migration guide](https://docs.astro.build/en/migrate/#deprecated-astroresolve) for more information.
+  See the [v0.24 migration guide](https://github.com/withastro/docs/blob/aa7e4f568f418657eba297778729a8aee2a36409/src/pages/en/migrate.mdx#deprecated-astroresolve) for more information.
 
   #### `Astro.fetchContent`
 
-  Use `Astro.glob` instead to fetch markdown files, or migrate to the [Content Collections](https://docs.astro.build/en/guides/content-collections/) feature.
+  Use `Astro.glob` instead to fetch markdown files, or migrate to the [Content Collections](/en/guides/content-collections/) feature.
 
   ```js
   let allPosts = await Astro.glob('./posts/*.md');
