--- a/src/pages/es/getting-started.mdx
+++ b/src/pages/es/getting-started.mdx
@@ -101,7 +101,7 @@ Nuestra [guía de instalación](/es/install/auto/) tiene instrucciones paso a pa
 
 [Historial de cambios de Astro](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md)
 
-[Guía para migrar a Astro](/es/migrate/)
+[Guía para migrar a Astro](/es/upgrade-astro/)
 
 
 ## Contribuye
