--- a/src/pages/fr/getting-started.mdx
+++ b/src/pages/fr/getting-started.mdx
@@ -98,7 +98,7 @@ Rejoignez-nous dans le [Discord Astro](https://astro.build/chat/) afin de partag
 
 [Changelog Astro](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md)
 
-[Guide de migration Astro](/fr/migrate/)
+[Guide de migration Astro](/fr/upgrade-astro/)
 
 ## Contribuer
 
