--- a/src/pages/ja/getting-started.mdx
+++ b/src/pages/ja/getting-started.mdx
@@ -104,7 +104,7 @@ Astroサイトの主要なコンセプトとパターンの例をご覧くださ
 
 [Astro更新履歴](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md)
 
-[Astroアップグレードガイド](/ja/migrate/)
+[Astroアップグレードガイド](/ja/upgrade-astro/)
 
 
 ## 貢献する
