--- a/src/pages/pt-br/getting-started.mdx
+++ b/src/pages/pt-br/getting-started.mdx
@@ -104,7 +104,7 @@ Junte-se a nós no [Discord do Astro](https://astro.build/chat) para compartilha
 
 [Histórico de alterações do Astro](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md)
 
-[Guia de Migração do Astro](/pt-br/migrate/)
+[Guia de Migração do Astro](/pt-br/upgrade-astro/)
 
 
 ## Contribua
