--- a/src/pages/ru/guides/markdown-content.mdx
+++ b/src/pages/ru/guides/markdown-content.mdx
@@ -254,7 +254,7 @@ export default defineConfig({
 
 :::caution[Устарело]
 Astro v1.0 **поддерживает только стандартный Markdown в `.md` файлах**. 
-Возможность использовать [компоненты или JSX в Markdown страницах более не включен по умолчанию](/ru/migrate/#deprecated-components-and-jsx-in-markdown)
+Возможность использовать компоненты или JSX в Markdown страницах более не включен по умолчанию
 и поддержка в конечном итоге будет полностью удалена. 
 
 Конфиг Astro поддерживает устаревший флаг `legacy.astroFlavoredMarkdown`, который
@@ -267,8 +267,6 @@ Astro v1.0 **поддерживает только стандартный Markdo
 - Переменные и JSX выражения в MDX (`.mdx`) файлах.
 
 - [Astro компоненты](/ru/core-concepts/astro-components/) или [компоненты UI фреймворков](/ru/core-concepts/framework-components/) в MDX (`.mdx`) файлах.
-
-Смотрите руководство по миграции для помощи с [преобразованием существующих файлов Astro `.md` в `.mdx`](/ru/migrate/#converting-existing-md-files-to-mdx).
 
 ## MDX возможности
 
