--- a/src/pages/zh-cn/getting-started.mdx
+++ b/src/pages/zh-cn/getting-started.mdx
@@ -11,7 +11,7 @@ import ContributorList from '../../components/ContributorList.astro'
 静态站点生成器 🚀 随意搭配框架 🚀 更少的 JavaScript
 
 :::tip
-有一个旧的项目？跟着[迁移指南](/zh-cn/migrate/)把它升级到 v1.0 beta！
+有一个旧的项目？跟着[迁移指南](/zh-cn/upgrade-astro/)把它升级到 v1.0 beta！
 :::
 
 ## 试用 Astro
@@ -98,7 +98,7 @@ pnpm create astro@latest
 
 [Astro 更新日志](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md)
 
-[Astro 迁移指南](/zh-cn/migrate/)
+[Astro 迁移指南](/zh-cn/upgrade-astro/)
 
 ## 贡献
 
