--- a/src/pages/zh-tw/getting-started.mdx
+++ b/src/pages/zh-tw/getting-started.mdx
@@ -12,7 +12,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 靜態網站產生器  🚀  使用熟悉的框架  🚀  推送更少 JavaScript
 
 
-> 有舊專案嗎？可以按照[轉移指南](/zh-tw/migrate/)升級到 v1.0 beta！
+> 有舊專案嗎？可以按照[轉移指南](/zh-tw/upgrade-astro/)升級到 v1.0 beta！
 
 ## 試玩 Astro
 
@@ -117,7 +117,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 [Astro 更新記錄](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md)
 
-[Astro 轉移指南](/zh-tw/migrate/)
+[Astro 轉移指南](/zh-tw/upgrade-astro/)
 
 
 ## 貢獻
