--- a/src/pages/ru/getting-started.mdx
+++ b/src/pages/ru/getting-started.mdx
@@ -97,4 +97,4 @@ npm create astro@latest
 
 [Журнал изменений Astro](https://github.com/withastro/astro/blob/main/packages/astro/CHANGELOG.md)
 
-[Руководство по миграции Astro](/ru/migrate/) (для обновления до v0.21+)
+[Руководство по миграции Astro](/ru/upgrade-astro/) (для обновления до v0.21+)
