--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -70,4 +70,4 @@ To convert other types of sites, such as a portfolio or documentation site, see 
 
 ## Community Resources 
 
-- Blog Post: [My Switch from Next to Astro](https://www.joshfinnie.com/blog/my-switch-from-Next-to-astro/).
+- Blog Post: [From NextJS to Astro](https://vanntile.com/blog/next-to-astro).
